--- a/html-base.html
+++ b/html-base.html
@@ -31,7 +31,7 @@
 
     <img src="premiereimage.jpg">
     <p></p>
-    <a href="https://www.google.com" target="_blank">Lien vers Google</a>
+    <a href="https://openai.com/index/chatgpt/" target="_blank">Lien vers OpenAI</a>
 
     <form>
         <input type="text" placehorder="Entrer du texte">
