--- a/ajouterecette.html
+++ b/ajouterecette.html
@@ -14,16 +14,21 @@
         </nav>
     </header>
 
-    <main>
-        <form>
-            <label for="title">Nom de la recette:</label>
-            <input type="text" id="title" name="title" required> <br>
-            <label for="description">Description de la recette:</label>
-            <input type="text" id="description" name="description" required> <br>
-            <label for="ingredients">Ingrédients:</label>
-            <input type="text" id="ingredients" name="ingredients" required> <br>
-            <input type="submit" id="submit" name="submit">
-        </form>
+    <form>
+        <label for="title">Nom de la recette:</label>
+        <input type="text" id="title" name="title" required> <br>
+        <label for="description">Description de la recette:</label>
+        <input type="text" id="description" name="description" required> <br>
+        <label for="ingredients">Ingrédients:</label>
+        <input type="text" id="ingredients" name="ingredients" required> <br>
+        <input type="submit" id="submit" name="submit">
+    </form>
+    
+    <footer>
+        <p>
+            &copy; 2024
+        </p>
+    </footer>
     
 </body>
 </html>
