--- a/index.html
+++ b/index.html
@@ -8,29 +8,93 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="#sale">Salé</a></li>
-                <li><a href="#sucre">Sucré</a></li>
-                <li><a href="ajouterecette.html">Ajouter une recette</a></li>
+                <a href="index.html">Accueil</a>
+                <a href="#sale">Salé</a>
+                <a href="#sucre">Sucré</a>
+                <a href="ajouterecette.html">Ajouter une recette</a>
+                <a href="favoris.html">Recettes à la une</a>
             </ul>
         </nav>
     </header>
 
-    <h1>Bienvenue sur mon site de recettes</h1>
-    <h2>
-        Chaque image est clicable, vous serez 
-        redirigez vers la recette au clic
-    </h2>
+    <main>
+        <h1>Bienvenue sur mon site de recettes</h1>
+        <h2>
+            Chaque image est clicable, vous serez 
+            redirigez vers la recette au clic
+        </h2>
 
-    <section id="sale">
-        <h3>Recettes salées</h3>
+        <section id="sale">
+            <h1>Recettes salées</h1>
 
-        <a href="https://o-tacos.com/" target="_blank"><img src="/imgsalees/tacos.jpg"></a>
-    </section>
+            <a href="https://www.ptitchef.com/recettes/plat/french-tacos-fid-1572328" target="_blank" alt="tacos">
+                <img src="tacos.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_pates-carbonara_21229.aspx" target="_blank" alt="pâtes carbonaras">
+                <img src="patescarbo.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_couscous-poulet-et-merguez-facile_17751.aspx#d79724-p1" target="_blank" alt="couscous">
+                <img src="couscous.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_roules-feuilletes-a-la-saucisse_26507.aspx" target="_blank" alt="feuilletées saucisses">
+                <img src="feuilletesaucisse.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_gratin-dauphinois_13809.aspx" target="_blank" alt="gratin dauphinois">
+                <img src="gratindauphinois.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_roti-de-veau-au-four_61313.aspx" target="_blank" alt="rôti de veau au four">
+                <img src="rotideveau.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_coquilles-saint-jacques-a-l-ancienne_24318.aspx" target="_blank" alt="coquilles saint jacques">
+                <img src="coquillessaintjacques.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_mini-pizzas-reine_16293.aspx" target="_blank" alt="minis pizzas reines">
+                <img src="minipizzareines.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_mayonnaises-et-variantes-multiples_22256.aspx" target="_blank" alt="mayibbause">
+                <img src="mayonnaise.jpg">
+            </a>
 
+        </section>
 
+        <section id="sucre">
+            <h1>Recettes sucrées</h1>
+
+            <a href="https://www.marmiton.org/recettes/recette_sables-de-noel-ausstecherle_33325.aspx" target="_blank" alt="sablés de noël">
+                <img src="sables.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_buche-de-noel-au-pain-d-epices_13220.aspx" target="_blank" alt="bûche de noël">
+                <img src="buchechocolat.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_glace-au-tiramisu-italie_18046.aspx" target="_blank" alt="grace au tiramisu">
+                <img src="glacetiramisu.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_tiramisu-recette-originale_12023.aspx" target="_blank" alt="tiramisu">
+                <img src="tiramisu.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_mousse-au-chocolat-tres-rapide_315805.aspx" target="_blank" alt="mousse au chocolat">
+                <img src="moussechocolat.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_the-tarte-au-citron-meringuee_22082.aspx" target="_blank" alt="tarte au citron meringuée">
+                <img src="tartecitronmeringuee.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_creme-dessert-facile-au-chocolat_37585.aspx#d48635-p1" target="_blank" alt="creme dessert au chocolat">
+                <img src="cremedessertchocolat.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_pizza-dessert-au-nutella_22191.aspx" target="_blank" alt="pizzal au nutella">
+                <img src="pizzanutella.jpg">
+            </a>
+            <a href="https://www.marmiton.org/recettes/recette_creme-brulee-au-pain-d-epice_21934.aspx" target="_blank" alt="crême brulée">
+                <img src="cremebrulee.jpg">
+            </a>
+
+        </section>
+    </main>
+    
     <footer>
-
+        <p>
+            &copy; 2024
+        </p>
     </footer>
 </body>
 </html>
