--- a/ajouterecette.html
+++ b/ajouterecette.html
@@ -17,10 +17,10 @@
     <form>
         <label for="title">Nom de la recette:</label>
         <input type="text" id="title" name="title" required> <br>
-        <label for="description">Description de la recette:</label>
-        <input type="text" id="description" name="description" required> <br>
-        <label for="ingredients">Ingrédients:</label>
-        <input type="text" id="ingredients" name="ingredients" required> <br>
+        <label for="link">Lien de la recette:</label>
+        <input type="url" id="link" name="link" required> <br>
+        <label for="image">Lien de l'image du résultat:</label>
+        <input type="url" id="link" name="link" required> <br>
         <input type="submit" id="submit" name="submit">
     </form>
     
