--- a/favoris.html
+++ b/favoris.html
@@ -73,6 +73,19 @@
                 <td>Salé</td>
             </tr>
         </table>
+
+        
+        <section>
+            <h1>Ingrédients Principaux des recettes du chef</h1>
+            <ul>
+                <li>1/2 de litre de l'eau</li>
+                <li>1 oeuf</li>
+                <li>1/2 de poulet</li>
+                <li>1/4 de poisson</li>
+                <li>1/4 de pomme de terre</li>
+            </ul>
+        </section>
+
     </main>
 
     <footer>
