--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Livre</title>
+    <title>Livre de Recettes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -96,5 +96,6 @@
             &copy; 2024
         </p>
     </footer>
+    
 </body>
 </html>
