--- a/ajouterecette.html
+++ b/ajouterecette.html
@@ -14,13 +14,13 @@
         </nav>
     </header>
 
-    <form>
+    <form class="addrecette">
         <label for="title">Nom de la recette:</label>
         <input type="text" id="title" name="title" required> <br>
         <label for="link">Lien de la recette:</label>
         <input type="url" id="link" name="link" required> <br>
-        <label for="image">Lien de l'image du résultat:</label>
-        <input type="url" id="link" name="link" required> <br>
+        <label for="linkimage">Lien de l'image du résultat:</label>
+        <input type="url" id="linkimage" name="linkimage" required> <br>
         <input type="submit" id="submit" name="submit">
     </form>
     
