--- a/ajouterecette.html
+++ b/ajouterecette.html
@@ -3,6 +3,7 @@
 <head>
     <title>Ajouter une Recette</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
@@ -14,14 +15,18 @@
         </nav>
     </header>
 
-    <form class="addrecette">
-        <label for="title">Nom de la recette:</label>
-        <input type="text" id="title" name="title" required> <br>
-        <label for="link">Lien de la recette:</label>
-        <input type="url" id="link" name="link" required> <br>
-        <label for="linkimage">Lien de l'image du résultat:</label>
-        <input type="url" id="linkimage" name="linkimage" required> <br>
+    <form class="addrecette" onsubmit="checkForm();return false">
+        <label for="nom">Votre nom :</label>
+        <input type="text" id="nom" name="nom"> <br>
+        <label for="email">Votre e-mail</label>
+        <input type="email" id="email" name="email"> <br>
+        <label for="motdepasse">Votre mot de passe (doit contenir au moins 8 caractères)</label>
+        <input type="password" id="motdepasse" name="motdepasse"> <br>
+        <label for="checkbox"></label>
+        <input type="checkbox" id="checkbox" name="checkbox"> J'accepte les conditions d'utilisation <br>
         <input type="submit" id="submit" name="submit">
+
+        <p id="messageRenvoyer"></p>
     </form>
     
     <footer>
