--- a/favoris.html
+++ b/favoris.html
@@ -2,13 +2,13 @@
 <html lang="fr">
 <head>
     <title>Recettes favorites du chef</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Retour à l'accueil</a></li>
+                <a href="index.html">Retour à l'accueil</a>
             </ul>
         </nav>
     </header>
