--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <title>Livre de Recettes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -14,6 +14,7 @@
                 <a href="#sucre">Sucré</a>
                 <a href="ajouterecette.html">Ajouter une recette</a>
                 <a href="favoris.html">Recettes à la une</a>
+                <a href="cookieclicker.html">Accéder au Cookie Clicker</a>
             </ul>
         </nav>
     </header>
