wip cookie clicker

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="#sucre">Sucré</a>
                 <a href="ajouterecette.html">Ajouter une recette</a>
                 <a href="favoris.html">Recettes à la une</a>
-                <a href="cookieclicker.html">Accéder au Cookie Clicker</a>
+                <a href="cookieclicker/cookieclicker.html">Accéder au Cookie Clicker</a>
             </ul>
         </nav>
     </header>
